# RustPractice

./: Cargo.toml  Readme.md  example.toml
ArcMutex/: Cargo.toml
ArcMutex/src/: main.rs
Channels/: Cargo.toml
Channels/src/: main.rs
Cli/: Cargo.toml  Readme.md
Cli/src/: main.rs
Cli/src/config/: cfg.rs
Enums/: Cargo.toml
Enums/src/: main.rs
Environments/: .env  Cargo.toml  exampleini.ini  prepare_binaries.sh
Environments/src/: main.rs
Errors/: Cargo.toml
Lifetimes/: Cargo.toml
Lifetimes/src/: main.rs
Models/: Cargo.toml
NewLib/: Cargo.toml
RunLocal/: Cargo.toml
Section_4/structs/src/: main.rs
Section_5/enums_pattern/src/: main.rs
Smartpointers/: Cargo.toml
Smartpointers/src/: main.rs
Struct/: Cargo.toml
Struct/src/: main.rs
Threads/: Cargo.toml
Threads/src/: main.rs
Tokio/: Cargo.toml
Traits/: Cargo.toml
Traits/src/: main.rs
UnitTests/: Cargo.toml
