[workspace]
members = [ "Struct", "Lifetimes", "Enums", "Tokio", "Threads", "UnitTests","NewLib",
            "Models","Traits","RunLocal","Errors","Channels","Smartpointers","ArcMutex","Cli","Environments"]

[workspace.package]
authors = ["Milos stankovic","Alice <a@example.com>", "Bob <b@example.com>"]
description = "Experimenting with stuff in Rust"
documentation = "https://somewebsitetodocumentation.com"

[profile.release]
codegen-units = 1 # Compile creates one after another so compiler can optimize better
debug = false # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false # Disable incremental compilation
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
overflow-checks = false # Disable overflow checks
panic = 'abort' # Strip expesive panic clean-up logic
rpath = false # Disable rpath
strip = "symbols" # Automatically strip symbols from the binary

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
