[package]
name = "cli"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"]}
serde = "*"
serde_json = "*"
reqwest = {version = "0.11.22", features = ["json","default"]}
