[package]
name = "environments"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-ini = "0.20.0"
toml = "0.8.8"
serde = "1.0.193"
serde_derive = "1.0.193"

